--- a/style.css
+++ b/style.css
@@ -294,7 +294,7 @@ a:hover{
 
 /*-------contact us css---------*/ 
 .banner{
-   background-image: url(image/cnctus.jpeg.jpeg) ;
+   background-image: url(cnctus.jpeg.jpeg) ;
    background-repeat: no-repeat;
    width: 1050px;
    height: 550px;
