--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
    display: none;
 }
 nav{
-   background-color: white;
+   background-color: black;
    height: 70px;
    width: 100%;
    margin-top: 2%;
@@ -72,7 +72,7 @@ ul li a:hover{
  .img{
    padding-left: 50px;
    height: 300px;
-   width: 500px;
+   width: 100%;
    
    padding-top: 0px;
    padding-bottom: 0px;
