--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ ul li{
 ul li a{
    font-size: 18px;
    font-family: sans-serif;
-   color: black;
+   color: white;
    text-decoration: none;
    padding-right: 20px;
    padding-left: 15px;
