--- a/style.css
+++ b/style.css
@@ -34,13 +34,13 @@ ul li a:hover{
    margin-right: 5%;
    padding: 27px 15px;
    max-width: 100%;
-   color: black;
+   color: orange;
 }
 .socialtop a{
    padding: 13px;
 }
 .socialtop a:hover{
-   color: orange;
+   background-color: white;
 }
 .c{
    float: left;
