--- a/style.css
+++ b/style.css
@@ -72,8 +72,8 @@ ul li a:hover{
  }
  .img{
    padding-left: 50px;
-   height: 300px;
-   width: 100%;
+   height: 80%px;
+   width: 150%;
    
    padding-top: 0px;
    padding-bottom: 0px;
