--- a/style.css
+++ b/style.css
@@ -72,8 +72,9 @@ ul li a:hover{
  }
  .img{
    padding-left: 50px;
-   height: 100%px;
-   width: 100%;
+   height: 50%;
+   width: 50%;
+  padding-right:50px;
    
    padding-top: 0px;
    padding-bottom: 0px;
