--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ ul li a{
    padding-left: 15px;
    float: left;
 }
+ul li a:hover{
+ color:#6e7681;
+}
 
 .socialtop{
    float: right;
@@ -65,60 +68,7 @@ ul li a{
    height: 10px;
    margin-top:-10%;
  }
-.u{
-    float: left;
-    font-size: 18px;
-    color: #1C2833 ;
-    
-    text-align: center;
-    padding-bottom: 10px;
-    padding-left: 0;
-    border-radius: 40px;
-    width: 140px;
-    height: 30px;
-}
-.u a:hover{
-   border-radius: 40px;
-   width: 140px;
-   height: 30px;
-   padding-bottom: 0px;
-   padding-right: 0px;
-   padding-left: 0px;
-   color: #1C2833 ;
- 
-   
- }
-.q{
-    float: left;
-    font-size: 18px;
-    color:#FBFCFC;
- 
-    text-align: center;
-    padding-bottom: 10px;
-    padding-left: 0;
-    border-radius: 40px;
-    width: 140px;
-    height: 30px;
-}
-.q a:hover{
-   border-radius: 40px;
-   width: 140px;
-   height: 30px;
-   padding-bottom: 0px;
-   padding-right: 0px;
-   padding-left: 0px;
-   color:#FBFCFC;
 
-}
-a{
-   text-decoration: none;
-   display: inline;
-   padding: 12px 16px;
-}
-a:hover{
-   background-color: white;
-   color: black;
-}
 #footer{
    width: 100%;
    height: 200px;
