--- a/style.css
+++ b/style.css
@@ -56,8 +56,8 @@ ul li a:hover{
  }
  .img{
   
-   height: 80%;
-   width: 80%;
+   height: 500px;
+   width: 1000px;
  
    padding-top: 20px;
    padding-bottom: 0px;
