--- a/style.css
+++ b/style.css
@@ -56,13 +56,11 @@ ul li a:hover{
  }
  .img{
   
-   height: 500px;
-   width: 1000px;
-   display: block;
-  margin-left: auto;
-  margin-right: auto;
-   padding-top: 10px;
-   padding-bottom: 10px;
+   height: 100%;
+   width: 100%;
+   background-repeat:no-repeat;
+  background-size:cover;
+  background-position:center;
  }
  .img-r{
    padding-left: 800px;
