--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ ul li a:hover{
 #footer{
    width: 100%;
    height: 200px;
-   background-color: black;
+   background-color: #6e7681;
    clear: both;
  margin-top:15%;
 }
