--- a/style.css
+++ b/style.css
@@ -128,7 +128,8 @@ ul li a:hover{
    color:white;
    font-size: 16px;
  display:inline;
- margin-top:6%;
+ margin-top:4%;
+ text-align:center;
 }
 
 
